--- a/src/app/components/toolbar/toolbar.component.css
+++ b/src/app/components/toolbar/toolbar.component.css
@@ -12,9 +12,6 @@
     height:36px;
 }
 
-.first-ld-md .sidenav-button{
-    margin-left: -8px;
-}
 
 .first-ld-md .login-button{
     margin-right: -8px;
@@ -63,12 +60,8 @@
     background-color: #002044;
 }
 
-fa-icon{
-    font-size: 18px;
-    margin-right:5px;
+.second fa-icon{
+    margin-right: 7px;
 }
 
-.sidenav-button fa-icon{
-    align-content: center;
-    margin-right: 0;
-}
+
