--- a/src/app/modules/html-viewer/html-viewer/html-viewer.component.css
+++ b/src/app/modules/html-viewer/html-viewer/html-viewer.component.css
@@ -33,22 +33,37 @@ margin-left: 1.5em;
 margin-right:0;
 }
 
-.html-content>.image{clear:both;text-align:center}
-.html-content>.image>img{display:block;margin:0 auto;max-width:100%}
-.html-content>.image>figcaption{color:#333;background-color:#f7f7f7;padding:.6em;font-size:.75em;outline-offset:-1px}
-.html-content>blockquote{overflow:hidden;padding-right:1.5em;padding-left:1.5em;margin-left:10px;font-style:italic;border-left:5px solid #ccc}
+.image{clear:both;text-align:center}
+.image>img{display:block;margin:0 auto;max-width:100%}
+.image>figcaption{color:#333;background-color:#f7f7f7;padding:.6em;font-size:.75em;outline-offset:-1px}
 
-.html-content>.table{overflow:auto;}
+blockquote{overflow:hidden;padding-right:1.5em;padding-left:1.5em;margin-left:10px;font-style:italic;border-left:5px solid #ccc}
 
-.html-content>.table>table{margin: 0 auto;border:1px solid #a4a4a4;border-collapse: collapse;}
-.html-content>.table>table th{font-weight:700;background:#f4f4f4; min-width:2em;padding:1em;text-align:center;border-color:#d9d9d9}
-.html-content>.table>table td{min-width:2em;padding:1em;text-align:center;border-color:#d9d9d9}
+.table{overflow:auto;}
 
-.html-content a {
-    text-decoration: none;
-}
+.table>table{margin: 0 auto;border:1px solid #a4a4a4;border-collapse: collapse;}
+.table>table th{font-weight:700;background:#e4e4e4; min-width:2em;padding:1em;text-align:center;border-color:#d9d9d9}
+.table>table td{min-width:2em;padding:1em;text-align:center;border-color:#d9d9d9}
+.table{ margin-bottom: 20px;}
 
 .media{
     width: 100%;
     margin: 0;
+}
+
+
+@media screen and (max-width: 600px){
+    figure{
+        margin:0;
+        width:100%;
+        margin-bottom:10px;
+    }
+    
+    .image-style-side, .image-style-align-left, .image-style-align-center, .image-style-align-right {
+        float: left;
+        margin-left: 0;
+        margin-right: 0;
+        max-width: 100%;
+        width: 100%;
+    }
 }
