--- a/src/app/modules/article/article-list-viewer/article-list-viewer.component.css
+++ b/src/app/modules/article/article-list-viewer/article-list-viewer.component.css
@@ -40,3 +40,11 @@ p{
 .article-title-xs{
     font-size:21px;
 }
+
+.mat-card{
+    padding:24px;
+}
+
+.mat-card-title{
+    margin-bottom: 16px;
+}
