--- a/src/app/modules/article/article-list/article-list.component.html
+++ b/src/app/modules/article/article-list/article-list.component.html
@@ -11,7 +11,7 @@
         <mat-paginator *ngIf="articlesNumber>articlesPerPage" [pageIndex]="page-1" [hidePageSize]="true" [pageSize]="articlesPerPage" [length]="articlesNumber" [pageSizeOptions]="[articlesPerPage]" (page)="pageChange($event)"></mat-paginator>
       </div>
       <div fxFlex.gt-sm="30%" fxLayoutGap="30px">
-        <article-category-widget *ngIf="category" [selected]="category"></article-category-widget>
+        <article-category-widget *ngIf="category" [selected]="category" (change)="categoryChange($event)"></article-category-widget>
         <facebook-widget></facebook-widget>
         <article-editor-quick-actions *ifRole="'eArticles'"></article-editor-quick-actions>
       </div>
