--- a/src/styles.css
+++ b/src/styles.css
@@ -14,7 +14,7 @@ body{
 
 a{
     text-decoration: none;
-    color: #073c65;
+    color: #0a569e;
 }
 
 @font-face{
@@ -25,4 +25,8 @@ a{
 * {
     font-family: 'Google Sans','GoogleSans',Roboto, Arial, sans-serif;
     line-height: 1.4;
+}
+
+.mat-expansion-panel-content {
+    font-size: 16px !important;
 }
