--- a/src/app/components/error-dialog/error-dialog.component.html
+++ b/src/app/components/error-dialog/error-dialog.component.html
@@ -9,5 +9,5 @@
   </mat-dialog-content>
   
   <mat-dialog-actions align="end">
-    <button class="mat-raised-button" (click)="close()">Ok</button>
+    <button class="mat-raised-button" matDialogClose>Ok</button>
   </mat-dialog-actions>
