--- a/src/app/modules/faq/faq/faq.component.css
+++ b/src/app/modules/faq/faq/faq.component.css
@@ -19,6 +19,7 @@
    .mat-expansion-panel-header{
        padding-top:5px;
        padding-bottom:5px;
+       font-size: 16px;
    }
   }
 
@@ -26,3 +27,4 @@
     font-weight: 300;
     font-size: 14px;
 }
+
