Fix bug with graphical visualization of accordions

--- a/src/app/modules/article/article-admin/article-admin.component.html
+++ b/src/app/modules/article/article-admin/article-admin.component.html
@@ -59,8 +59,8 @@
 
       <!-- Start of articles expansion panel list-->
       <div class="accordion-container">
-        <mat-accordion *ngFor="let article of articles" class="mat-elevation-z1" fxHide.gt-sm>
-          <mat-expansion-panel>
+        <mat-accordion class="mat-elevation-z1" fxHide.gt-sm>
+          <mat-expansion-panel *ngFor="let article of articles">
             <mat-expansion-panel-header>
               <mat-panel-title>
                 {{article.title}}
