--- a/src/app/modules/competitions/edit/edit.component.html
+++ b/src/app/modules/competitions/edit/edit.component.html
@@ -1,1 +1,11 @@
-ciao
+<div class="general-container" fxLayout fxLayoutAlign="center">
+  <div fxFlex="80%" fxFlex.xs="100%" fxLayout="column" *ngIf="competition">
+    <h1>{{competition.name}}</h1>
+    <mat-tab-group color="accent" [selectedIndex]="0">
+      <mat-tab label="Generale">
+        <edit-general-info [(competition)]="competition"></edit-general-info>
+      </mat-tab>
+
+    </mat-tab-group>
+  </div>
+</div>
