--- a/src/app/modules/competitions/edit-registration/edit-registration.component.html
+++ b/src/app/modules/competitions/edit-registration/edit-registration.component.html
@@ -9,7 +9,7 @@
     <mat-error>È necessario inserire un numero maggiore di 0.</mat-error>
   </mat-form-field>
 
-  <div fxLayout=" row" fxLayout.xs="column" fxLayoutGap.gt-xs="2%">
+  <div fxLayout=" row" fxLayout.xs="column" fxLayoutGap.xs="20px" fxLayoutGap.gt-xs="2%">
 
     <mat-form-field fxFlex.gt-xs="49%">
       <input matInput [matDatepicker]="startPicker" [max]="competition.startDate" placeholder="Apertura iscrizioni"
@@ -25,7 +25,7 @@
         placeholder="Chiusura iscrizioni" [(ngModel)]="registration.registrationClose"
         formControlName="registrationClose" required>
       <mat-datepicker-toggle matSuffix [for]="endPicker"></mat-datepicker-toggle>
-      <mat-datepicker [startAt]="registration.registrationOpenn" #endPicker></mat-datepicker>
+      <mat-datepicker [startAt]="registration.registrationOpen" #endPicker></mat-datepicker>
       <mat-hint>La data di chiusura delle iscrizioni alla competizione.</mat-hint>
       <mat-error>È necessario inserire una data valida.</mat-error>
     </mat-form-field>
@@ -103,8 +103,72 @@
     <mat-hint>Eventuali istruzioni riguardo l'ingresso degli spettatori e degli accompagnatori'.</mat-hint>
   </mat-form-field>
 
-  <h2>Metodi di pagamento</h2>
-  <mat-checkbox *ngFor="let p of paymentTypes">{{p.name}}</mat-checkbox>
+  <h2 *ngIf="registration.isRegistrationPaid">Metodi di pagamento</h2>
+  <mat-checkbox formControlName="cc" *ngIf="registration.isRegistrationPaid">Carta di Credito</mat-checkbox>
+  <mat-checkbox formControlName="cash" *ngIf="registration.isRegistrationPaid">Contanti</mat-checkbox>
+  <mat-checkbox formControlName="paypal" *ngIf="registration.isRegistrationPaid">PayPal</mat-checkbox>
+
+  <mat-form-field *ngIf="registrationForm.get('paypal').value">
+    <input matInput [(ngModel)]="registration.paypalLink" formControlName="paypalLink" placeholder="Paypal.me"
+      type="text">
+    <mat-hint>Inserisci il link Paypal.me da usare per il pagamento con PayPal.</mat-hint>
+  </mat-form-field>
+
+  <h2
+    *ngIf="registration.isRegistrationPaid && (registrationForm.get('paypal').value || registrationForm.get('cc').value)">
+    Rimborso</h2>
+  <mat-checkbox [(ngModel)]="registration.refundAvailable" formControlName="refundAvailable"
+    *ngIf="registration.isRegistrationPaid && (registrationForm.get('paypal').value || registrationForm.get('cc').value)">
+    È disponibile il rimborso
+  </mat-checkbox>
+
+  <mat-table [dataSource]="registration.refundPolicy"
+    *ngIf="registration.refundAvailable && registration.isRegistrationPaid && (registrationForm.get('paypal').value || registrationForm.get('cc').value)">
+    <ng-container matColumnDef="percentage">
+      <mat-header-cell *matHeaderCellDef>Rimborso</mat-header-cell>
+      <mat-cell *matCellDef="let row">{{row.percentage}}%</mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="deadline">
+      <mat-header-cell *matHeaderCellDef>Scadenza</mat-header-cell>
+      <mat-cell *matCellDef="let row">
+        {{row.deadline.toLocaleDateString("it-it", { day: "numeric", year: "numeric", month: "long" })}}</mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="options">
+      <mat-header-cell *matHeaderCellDef>Opzioni</mat-header-cell>
+      <mat-cell *matCellDef="let row">
+        <button mat-icon-button (click)="removePolicy(row.percentage, row.deadline)">
+          <fa-icon icon="trash"></fa-icon>
+        </button>
+      </mat-cell>
+    </ng-container>
+
+    <mat-header-row *matHeaderRowDef="['percentage','deadline','options']"></mat-header-row>
+    <mat-row *matRowDef="let row; columns: ['percentage','deadline','options']"></mat-row>
+  </mat-table>
+
+  <form formGroupName="newRefundPolicy"
+    *ngIf="registration.refundAvailable && registration.isRegistrationPaid && (registrationForm.get('paypal').value || registrationForm.get('cc').value)">
+    <h3>Nuova Policy</h3>
+    <div fxLayout="row" fxLayoutGap="20px" fxLayoutAlign="start center">
+      <mat-form-field>
+        <input matInput placeholder="Percentuale" formControlName="percentage" type="number" [min]="0" [max]="100">
+        <mat-hint>La percentuale di rimborso</mat-hint>
+      </mat-form-field>
+      <mat-form-field fxFlex.gt-xs="49%">
+        <input matInput [matDatepicker]="refundPicker" formControlName="deadline" [max]="competition.startDate"
+          [min]="registration.registrationOpen" placeholder="Scadenza">
+        <mat-datepicker-toggle matSuffix [for]="refundPicker"></mat-datepicker-toggle>
+        <mat-datepicker #refundPicker [startAt]="registration.registrationOpen"></mat-datepicker>
+        <mat-hint>La data entro la quale viene fornita questa percentuale di rimborso</mat-hint>
+      </mat-form-field>
+      <button mat-icon-button (click)="addPolicy()">
+        <fa-icon [icon]="['fas','plus-square']"></fa-icon>
+      </button>
+    </div>
+
+  </form>
 
   <div fxLayout="row" fxLayoutGap="10px" style="padding-top:20px">
     <button mat-raised-button color="primary" (click)="updateRegistration()">Aggiorna registrazione</button>
