--- a/src/app/modules/competitions/edit/edit.component.html
+++ b/src/app/modules/competitions/edit/edit.component.html
@@ -2,13 +2,20 @@
   <div fxFlex="80%" fxFlex.xs="100%" fxLayout="column" *ngIf="competition">
     <h1>{{competition.name}} <fa-icon icon="check" style="color:green" *ngIf="updated"></fa-icon>
     </h1>
-    <mat-tab-group color="accent" [selectedIndex]="1">
+    <mat-tab-group color="accent" [selectedIndex]="2">
       <mat-tab label="Generale">
         <edit-general-info (updated)="updated=$event" [(competition)]="competition"></edit-general-info>
       </mat-tab>
       <mat-tab label="Registrazione">
         <edit-registration-info (updated)="updated=$event" [competition]="competition"></edit-registration-info>
       </mat-tab>
+      <mat-tab label="Viaggio">
+        <edit-directions-info (updated)="updated=$event" [competition]="competition"></edit-directions-info>
+      </mat-tab>
+      <mat-tab label="Schedule">
+        <edit-schedule-info></edit-schedule-info>
+      </mat-tab>
+      
 
     </mat-tab-group>
   </div>
