Improve schedule import function from the wca website

--- a/src/app/modules/competitions/competition/competition.component.html
+++ b/src/app/modules/competitions/competition/competition.component.html
@@ -11,12 +11,7 @@
       <mat-tab label="Registrazione">
         <registration-info [competition]="competition"></registration-info>
       </mat-tab>
-      <mat-tab label="Indicazioni"> Content 4 </mat-tab>
-      <mat-tab label="Convenzioni"> Content 4 </mat-tab>
-      <mat-tab label="Sponsor"> Content 4 </mat-tab>
-      <mat-tab label="Maglietta"> Content 4 </mat-tab>
-      <mat-tab label=""> Content 4 </mat-tab>
-      <mat-tab label=""> Content 4 </mat-tab>
+      <mat-tab label="Indicazioni"> </mat-tab>
     </mat-tab-group>
   </div>
 </div>
