add list of official competitions

--- a/src/app/modules/competitions/schedule-viewer/schedule-viewer.component.html
+++ b/src/app/modules/competitions/schedule-viewer/schedule-viewer.component.html
@@ -48,7 +48,7 @@
 
       <ng-container matColumnDef="advance">
         <mat-header-cell *matHeaderCellDef>Avanzano</mat-header-cell>
-        <mat-cell *matCellDef="let row">{{row.advancementLevel}}</mat-cell>
+        <mat-cell *matCellDef="let row">{{row.advance}}</mat-cell>
       </ng-container>
 
       <mat-header-row *matHeaderRowDef="['start','end','name','round','format','cutoff','timelimit','advance']"></mat-header-row>
