--- a/src/app/modules/competitions/competition/competition.component.css
+++ b/src/app/modules/competitions/competition/competition.component.css
@@ -2,3 +2,10 @@ h1{
     margin-top: 10px;
     margin-bottom: 10px;
 }
+
+@media screen and (max-width:1100px){
+    .title{
+        padding-left: 5%;
+        padding-right: 5%;
+    }
+}
